# reducao

./: .gitignore  Client.py  Pipfile  README.md  app.py  flake.nix  flake_.nix  manifest.scm  pyproject.toml  reducao.ipynb  reducao.py  requirements.txt  result.ods  run.sh  shell.nix  wcs.py  wsgi.py
static/js/: scripts.js
templates/: interface.html  plot.html
upfolder/: aa1.corr  aa1.fit
upfolder/alberto_24122020/: .~lock.data.xlsx#
